--- a/1/Makefile
+++ b/1/Makefile
@@ -7,9 +7,15 @@ $(OUT)/%.i: %.txt
 
 HEADERS := list.h read_input.h
 
-PART1_INPUT = test
+INPUT = test
 
-$(OUT)/part1.o: part1.cc $(HEADERS) $(OUT)/$(PART1_INPUT).i $(OUT)
+$(OUT)/_input:
+	@ if test -f $@ && [ $$(cat $@) = $(INPUT) ]; then \
+		:; else echo $(INPUT) > $@; fi
+
+.PHONY: $(OUT)/_input
+
+$(OUT)/%.o: %.cc $(HEADERS) $(OUT)/$(INPUT).i $(OUT)/_input
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $< -o $@
 
-$(OUT)/part1.o: CPPFLAGS=-DINPUT=\"$(OUT)/$(PART1_INPUT).i\"
+$(OUT)/%.o: CPPFLAGS=-DINPUT=\"$(OUT)/$(INPUT).i\"
